added case study projects, icon, organied files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!--add info here-->
     <title>Kimberly Flores | Developer & Designer</title>
     <meta charset="UTF-8">
-    <meta name="description" content="Front-End Coding Portfolio">
+    <meta name="description" content="Coding Portfolio">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Kimberly Flores">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href='./main.css'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text&family=Poppins&display=swap" rel="stylesheet">
+    
+    <link rel="shortcut icon" href="images/plant.ico" />
     <!--Link css, javascript files, possibly bootstrap-->
     <script src="app.js">
     </script>
@@ -69,7 +71,7 @@
             <div class="greenline"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
-                    <img class="left-side"src="recipekeeps.png">
+                    <img class="left-side"src="images/recipekeeps.png">
                 </div>
                 <div class="column right-side">
                     <h4 class="project-title">Recipe Keeps</h4>
@@ -77,11 +79,11 @@
                     <p>Keep track of all your recipes in one single place. Users can create an account where they 
                         can add, delete, and edit their own recipes. 
                     </p>
-                    <p>Tools/Frameworks: React, Redux, Express, Nodejs, MongoDB, AWS-S3, Bootstrap, React router 
+                    <p><span class="bold">Tools/Frameworks:</span> React, Redux, Express, Nodejs, MongoDB, AWS-S3, Bootstrap, React router 
                     </p>
                     <div class="link-div">
-                        <a class="links" href="https://github.com/kimberlyflrs/recipe-keeps">Github link</a> 
-                        <a class="links" href="https://obscure-taiga-26298.herokuapp.com/">Demo</a>
+                        <a class="links" href="https://github.com/kimberlyflrs/recipe-keeps" target="_blank">Github link</a> 
+                        <a class="links" href="https://obscure-taiga-26298.herokuapp.com/" target="_blank">Demo</a>
                     </div>
                 </div>
             </div>
@@ -94,7 +96,7 @@
             <div class="greenline"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
-                    <img class="left-side"src="pomodoro.png">
+                    <img class="left-side"src="images/pomodoro.png">
                 </div>
                 <div class="column right-side">
                     <h4 class="project-title">Pomodoro Clock</h4>
@@ -102,10 +104,10 @@
                     <p>A timer that follows the pomodoro technique (focus on a task for 25 minutes, take a break for 5 minutes). The times are 
                         adjustable for break and session length.
                     </p>
-                    <p>Tools/Frameworks: React, Redux, Bootstrap</p>
+                    <p><span class="bold">Tools/Frameworks:</span> React, Redux, Bootstrap</p>
                     <div class="link-div">
-                        <a class="links" href="https://github.com/kimberlyflrs/pomodoro-clock">Github link</a> 
-                        <a class="links" href="https://pomodoro-clock-kf.herokuapp.com/">Demo</a></span>
+                        <a class="links" href="https://github.com/kimberlyflrs/pomodoro-clock" target="_blank">Github link</a> 
+                        <a class="links" href="https://pomodoro-clock-kf.herokuapp.com/" target="_blank">Demo</a></span>
                     </div>
                 </div>
             </div>
@@ -117,7 +119,7 @@
             <div class="greenline"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
-                    <img class="left-side"src="multiplication.png">
+                    <img class="left-side"src="images/multiplication.png">
                 </div>
                 <div class="column right-side">
                     <h4 class="project-title">Multiplication Quiz</h4>
@@ -126,10 +128,10 @@
                         different game modes. A user can practice a specific multiplication table, answer as 
                         many questions in a minute, or answer 10 random multiplication questions. 
                     </p>
-                    <p>Tools/Frameworks: HTML5, CSS3, JavaScript, Bootstrap</p>
+                    <p><span class="bold">Tools/Frameworks:</span> HTML5, CSS3, JavaScript, Bootstrap</p>
                     <div class="link-div">
-                        <a class="links" href="https://github.com/kimberlyflrs/Multiplication-Quiz">Github link</a> 
-                        <a class="links" href="https://multiplication-pracctice-quiz.herokuapp.com/">Demo</a>
+                        <a class="links" href="https://github.com/kimberlyflrs/Multiplication-Quiz" target="_blank">Github link</a> 
+                        <a class="links" href="https://multiplication-pracctice-quiz.herokuapp.com/" target="_blank">Demo</a>
                     </div>
                 </div>
             </div>
@@ -149,10 +151,10 @@
                     <div class="project-line"></div>
                     <p>A website showcasing my coding, ui/ux, and design projects.
                     </p>
-                    <p>Tools/Frameworks: HTML5, CSS3, JavaScript</p>
+                    <p><span class="bold">Tools/Frameworks:</span> HTML5, CSS3, JavaScript</p>
                     <div class="link-div">
-                        <a class="links" href="https://github.com/kimberlyflrs/code-portfolio">Github link</a> 
-                        <a class="links">Demo</a>
+                        <a class="links" href="https://github.com/kimberlyflrs/code-portfolio" target="_blank">Github link</a> 
+                        <a class="links" href="https://kimberly-flores.com" target="_blank">Demo</a>
                     </div>
                 </div>
             </div>
@@ -165,7 +167,7 @@
             <div class="greenline"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
-                    <img class="left-side"src="jewleryshop.png">
+                    <img class="left-side"src="images/jewleryshop.png">
                 </div>
                 <div class="column right-side">
                     <h4 class="project-title">Jewlery Shop Page</h4>
@@ -173,8 +175,8 @@
                     <p>A home page for a jewlery shop. This is a single coded home page. All other pages do not link anywhere.
                     </p>
                     <div class="link-div">
-                        <a class="links" href="https://codepen.io/kimberlyflrs/pen/xxGwBaW">CodePen link</a> 
-                        <a class="links" href="https://codepen.io/kimberlyflrs/full/xxGwBaW">Demo</a>
+                        <a class="links" href="https://codepen.io/kimberlyflrs/pen/xxGwBaW" target="_blank">CodePen link</a> 
+                        <a class="links" href="https://codepen.io/kimberlyflrs/full/xxGwBaW" target="_blank">Demo</a>
                     </div>
                 </div>
             </div>
@@ -192,7 +194,13 @@
             <div class="column right-side">
                 <h4 class="project-title">Tweet Analyzer</h4>
                 <div class="project-line"></div>
-                <p>The tweet analyzer looks up tweets
+                <p>The tweet analyzer creates a webpage report which helps a researcher understand a week worth of 
+                    Tweets from RunKeeper, a running app. We used the Twitter api to create a json full of runkeeper 
+                    tweets and then displayed it on multiple graphs using vega-lite.
+                </p>
+                <p><span class="bold">
+                    Tools:</span> JavaScript, TypeScript, Twitter api
+                    
                 </p>
                 <div class="link-div">
                     <a class="links" href="https://codepen.io/kimberlyflrs/pen/xxGwBaW">CodePen link</a> 
@@ -235,9 +243,10 @@
             <div class="column right-side">
                 <h4 class="project-title">Sleep Logger App</h4>
                 <div class="project-line"></div>
-                <p>The sleep logger app allows the user to track how long they sleep. Information is saved 
-                    through Firebase and previous entries can be viewed.
+                <p>My partner and I created a sleep tracking app through Ionic. The sleep logger app allows the user to track how long they sleep. 
+                    Information is saved through Firebase and previous entries can be viewed.
                 </p>
+                <p><span class="bold">Tools:</span> Ionic framework, Firebase</p>
                 <div class="link-div">
                     <a class="links" href="https://codepen.io/kimberlyflrs/pen/xxGwBaW">CodePen link</a> 
                     <a class="links" href="https://codepen.io/kimberlyflrs/full/xxGwBaW">Demo</a>
@@ -258,8 +267,10 @@
             <div class="column right-side">
                 <h4 class="project-title">ICS Search Engine</h4>
                 <div class="project-line"></div>
-                <p>The ICS Search Engine looks through an index.
+                <p>My group created a search engine for the ics department. Through this project, we learned how to create an index 
+                    and rank each item in terms of relevancy.
                 </p>
+                <p><span class="bold">Tools:</span> Python, MongoDB</p>
                 <div class="link-div">
                     <a class="links" href="https://codepen.io/kimberlyflrs/pen/xxGwBaW">CodePen link</a> 
                     <a class="links" href="https://codepen.io/kimberlyflrs/full/xxGwBaW">Demo</a>
@@ -267,6 +278,79 @@
             </div>
         </div>
     </div> 
+
+
+           <!--VidPT-->
+           <div class="code-project filterProject ux">
+            <h4 class="sm-project-title">VidPT Mobile App</h4>
+            <div class="greenline"><div class="sm-project-line"></div></div>
+            <div class="row2">
+                <div class="column">
+                    <img class="left-side"src="images/vidpt-case-photo.png">
+                </div>
+                <div class="column right-side">
+                    <h4 class="project-title">VidPT Mobile App</h4>
+                    <div class="project-line"></div>
+                    <p>The VidPT mobile app allows users to create their own personalized rehab routine or with supervision 
+                        from a physical therapist. Users can track their progress, interact with users, and add notes to each exercise.
+                    </p>
+                    <p><span class="bold">Role:</span> User Experience Design, User Interface Design, User Research</p>
+                    <div class="link-div">
+                        <a class="links" href="https://kimberlyflrs.github.io/vidpt.html" target="_blank">Case Study</a> 
+                    </div>
+                </div>
+            </div>
+        </div> 
+
+
+
+               <!--EcoStat-->
+       <div class="code-project filterProject ux">
+        <h4 class="sm-project-title">EcoStat</h4>
+        <div class="greenline"><div class="sm-project-line"></div></div>
+        <div class="row2">
+            <div class="column">
+                <img class="left-side"src="images/ecostat-case-photo.png">
+            </div>
+            <div class="column right-side">
+                <h4 class="project-title">EcoStat</h4>
+                <div class="project-line"></div>
+                <p>My team was tasked with tackling an environmental issue with IoT (Internet of Things) 
+                    devices. We proceeded to create EcoStat, a mobile app, that allows users to understand 
+                    how their utility usage from smart devices impacts the environment. I was responsible for 
+                    conducting user and product research and usability testing.
+                </p>
+                <p><span class="bold">Role:</span> User Experience Researcher</p>
+                <div class="link-div">
+                    <a class="links" href="https://kimberlyflrs.github.io/ecostat.html" target="_blank">Case Study</a> 
+                </div>
+            </div>
+        </div>
+    </div> 
+
+
+           <!--Food Journal-->
+           <div class="code-project filterProject ux">
+            <h4 class="sm-project-title">Food Journal</h4>
+            <div class="greenline"><div class="sm-project-line"></div></div>
+            <div class="row2">
+                <div class="column">
+                    <img class="left-side"src="images/foodjournal-case-photo.png">
+                </div>
+                <div class="column right-side">
+                    <h4 class="project-title">Food Journal</h4>
+                    <div class="project-line"></div>
+                    <p>Food Journal is an application that can be run on mobile, web, Google Home, Amazon Alexa, 
+                        and Apple watch. I was in charge of designing and programming the mobile app and 
+                        personal assistant devices.
+                    </p>
+                    <p><span class="bold">Role:</span> User Experience Designer, Front-End Developer</p>
+                    <div class="link-div">
+                        <a class="links" href="https://kimberlyflrs.github.io/foodjournal.html" target="_blank">Case Study</a> 
+                    </div>
+                </div>
+            </div>
+        </div> 
 
     </section>
 
@@ -356,15 +440,15 @@
 
         <div class="row2">
             <div class="column" id="palmimage"> 
-                <img src="single-palm-tree.jpg" id="palm"/>
+                <img src="images/single-palm-tree.jpg" id="palm"/>
             </div>
             <div class="column" id="contact">
-                <p>Hello! Thank you so much for expressing interest in my work. If you have a project 
+                <p>Hello! Thank you for expressing interest in my work. If you have a project 
                     in mind or would like to chat, contact me using my email.
                 </p>
                 <div class="row spacing-top">
-                    <i class="far fa-envelope fa-2x spacing-below" id="envelope"></i>
-                    <a href="mailto: kimbermf@uci.edu">kimbermf@uci.edu</a>
+                    <a href="mailto: kimbermf@uci.edu"><i class="far fa-envelope fa-2x spacing-below" id="envelope"></i></a>
+                    <a href="mailto: kimbermf@uci.edu" id="email">kimbermf@uci.edu</a>
                 </div>
             </div>
         </div>
