added video of class projects

--- a/index.html
+++ b/index.html
@@ -189,7 +189,10 @@
         <div class="greenline"><div class="sm-project-line"></div></div>
         <div class="row2">
             <div class="column">
-                <img class="left-side"src="jewleryshop.png">
+                <video width="320" height="240" controls class="left-side">
+                    <source src="videos/tweet_analyzer.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                  </video>
             </div>
             <div class="column right-side">
                 <h4 class="project-title">Tweet Analyzer</h4>
@@ -216,8 +219,10 @@
         <div class="greenline"><div class="sm-project-line"></div></div>
         <div class="row2">
             <div class="column">
-                <img class="left-side"src="jewleryshop.png">
-            </div>
+                <video width="320" height="240" controls class="left-side">
+                    <source src="videos/spotify_demo.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                  </video>            </div>
             <div class="column right-side">
                 <h4 class="project-title">Spotify Page</h4>
                 <div class="project-line"></div>
@@ -238,7 +243,10 @@
         <div class="greenline"><div class="sm-project-line"></div></div>
         <div class="row2">
             <div class="column">
-                <img class="left-side"src="jewleryshop.png">
+                <video width="320" height="240" controls class="left-side">
+                    <source src="videos/sleeptracker_demo.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                  </video>
             </div>
             <div class="column right-side">
                 <h4 class="project-title">Sleep Logger App</h4>
@@ -262,8 +270,10 @@
         <div class="greenline"><div class="sm-project-line"></div></div>
         <div class="row2">
             <div class="column">
-                <img class="left-side"src="jewleryshop.png">
-            </div>
+                <video width="320" height="240" controls class="left-side">
+                    <source src="videos/searchengine_demo.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                  </video>            </div>
             <div class="column right-side">
                 <h4 class="project-title">ICS Search Engine</h4>
                 <div class="project-line"></div>
